syntax = "proto3";
package protos;
option go_package = "./protos";

// The validation function that checks if the user has the required permission over the project
message ValidationRequest{
  string jwt = 1;
  string projectId = 2;
  repeated string requiredRoles = 3;
  string invitation = 4 ;
}

// The validation response that will contain the results of the validation request
message ValidationResponse{
  string error = 1;
  bool isValid = 2;
}

// Service definition for the authentication RPC Service
service authRpcService{
  rpc ValidateRequest(ValidationRequest) returns (ValidationResponse) {}
}